# npc

./: .gitignore  CMakeLists.txt  Changelog  INSTALL  Makefile  Makefile.bkp  README.md  build.sh
locale/en_EN/LC_MESSAGES/: npc.mo  npc.po
locale/fr_FR/LC_MESSAGES/: npc.mo  npc.po
src/: Internationalization.README  circle_interface.vala  colors_scheme.vala  frames_model.vala  graph_utils.vala  hosts_graph.vala  internationa.sh  io_board.vala  json_config_file.vala  main.vala  navigator_interface.vala  npc.glade  npc.ui  npc_config_file.vala  npc_interface.vala  npc_ui.vala  utils.vala
vapis/: libpcap.vapi
